// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users form MyStudentDashboard Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <section
          class="hero-wrap hero-wrap-2"
          data-stellar-background-ratio="0.5"
          style="background-image: url(images/bg_1.jpg);"
        >
          <div
            class="overlay"
          />
          <div
            class="container"
          >
            <div
              class="row no-gutters slider-text align-items-center justify-content-center"
            >
              <div
                class="col-md-9 text-center"
              >
                <h1
                  class="mb-2 bread"
                >
                  Student Manager
                </h1>
                <p
                  class="breadcrumbs"
                >
                  <span
                    class="mr-2"
                  >
                    <a
                      href="/"
                    >
                      Home 
                      <i
                        class="ion-ios-arrow-forward"
                      />
                    </a>
                  </span>
                   
                  <span>
                    Student Manager
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </span>
                </p>
              </div>
            </div>
          </div>
        </section>
        <section
          class="ftco-section"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col-lg-10 bg-light"
              >
                <div>
                  <p>
                    <em>
                      Loading...
                    </em>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-lg-10 bg-light mt-2"
              >
                <div
                  class="d-flex justify-content-center align-items-start m-2"
                >
                  <div
                    class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorSuccess MuiChip-clickable MuiChip-clickableColorSuccess MuiChip-filledSuccess mr-2 css-18ck578-MuiButtonBase-root-MuiChip-root"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                    >
                      Assigned
                    </span>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </div>
                  <div
                    class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-nz3zgg-MuiButtonBase-root-MuiChip-root"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                    >
                      Done
                    </span>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </div>
                </div>
                <div>
                  <p>
                    <em>
                      Loading...
                    </em>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <div>
      <section
        class="hero-wrap hero-wrap-2"
        data-stellar-background-ratio="0.5"
        style="background-image: url(images/bg_1.jpg);"
      >
        <div
          class="overlay"
        />
        <div
          class="container"
        >
          <div
            class="row no-gutters slider-text align-items-center justify-content-center"
          >
            <div
              class="col-md-9 text-center"
            >
              <h1
                class="mb-2 bread"
              >
                Student Manager
              </h1>
              <p
                class="breadcrumbs"
              >
                <span
                  class="mr-2"
                >
                  <a
                    href="/"
                  >
                    Home 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </a>
                </span>
                 
                <span>
                  Student Manager
                  <i
                    class="ion-ios-arrow-forward"
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </section>
      <section
        class="ftco-section"
      >
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-10 bg-light"
            >
              <div>
                <p>
                  <em>
                    Loading...
                  </em>
                </p>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-lg-10 bg-light mt-2"
            >
              <div
                class="d-flex justify-content-center align-items-start m-2"
              >
                <div
                  class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorSuccess MuiChip-clickable MuiChip-clickableColorSuccess MuiChip-filledSuccess mr-2 css-18ck578-MuiButtonBase-root-MuiChip-root"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                  >
                    Assigned
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-nz3zgg-MuiButtonBase-root-MuiChip-root"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                  >
                    Done
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div>
                <p>
                  <em>
                    Loading...
                  </em>
                </p>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Users form MyTeacherDashboard Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <section
          class="hero-wrap hero-wrap-2"
          data-stellar-background-ratio="0.5"
          style="background-image: url(images/bg_1.jpg);"
        >
          <div
            class="overlay"
          />
          <div
            class="container"
          >
            <div
              class="row no-gutters slider-text align-items-center justify-content-center"
            >
              <div
                class="col-md-9 text-center"
              >
                <h1
                  class="mb-2 bread"
                >
                  Teacher Manager
                </h1>
                <p
                  class="breadcrumbs"
                >
                  <span
                    class="mr-2"
                  >
                    <a
                      href="/"
                    >
                      Home 
                      <i
                        class="ion-ios-arrow-forward"
                      />
                    </a>
                  </span>
                   
                  <span>
                    Teacher Manager
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </span>
                </p>
              </div>
            </div>
          </div>
        </section>
        <section
          class="ftco-section"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col-lg-10 bg-light"
              >
                <div>
                  <p>
                    <em>
                      Loading...
                    </em>
                  </p>
                </div>
              </div>
              <div
                class="col-lg-10 bg-light mt-5"
              >
                <div>
                  <p>
                    <em>
                      Loading...
                    </em>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <div>
      <section
        class="hero-wrap hero-wrap-2"
        data-stellar-background-ratio="0.5"
        style="background-image: url(images/bg_1.jpg);"
      >
        <div
          class="overlay"
        />
        <div
          class="container"
        >
          <div
            class="row no-gutters slider-text align-items-center justify-content-center"
          >
            <div
              class="col-md-9 text-center"
            >
              <h1
                class="mb-2 bread"
              >
                Teacher Manager
              </h1>
              <p
                class="breadcrumbs"
              >
                <span
                  class="mr-2"
                >
                  <a
                    href="/"
                  >
                    Home 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </a>
                </span>
                 
                <span>
                  Teacher Manager
                  <i
                    class="ion-ios-arrow-forward"
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </section>
      <section
        class="ftco-section"
      >
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-10 bg-light"
            >
              <div>
                <p>
                  <em>
                    Loading...
                  </em>
                </p>
              </div>
            </div>
            <div
              class="col-lg-10 bg-light mt-5"
            >
              <div>
                <p>
                  <em>
                    Loading...
                  </em>
                </p>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Users form NewUserAccount Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <section
          class="hero-wrap hero-wrap-2"
          data-stellar-background-ratio="0.5"
          style="background-image: url(images/bg_1.jpg);"
        >
          <div
            class="overlay"
          />
          <div
            class="container"
          >
            <div
              class="row no-gutters slider-text align-items-center justify-content-center"
            >
              <div
                class="col-md-9 text-center"
              >
                <h1
                  class="mb-2 bread"
                >
                  Login
                </h1>
                <p
                  class="breadcrumbs"
                >
                  <span
                    class="mr-2"
                  >
                    <a
                      href="/"
                    >
                      Home 
                      <i
                        class="ion-ios-arrow-forward"
                      />
                    </a>
                  </span>
                   
                  <span>
                    New User Account 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </span>
                </p>
              </div>
            </div>
          </div>
        </section>
        <section
          class="ftco-section ftco-no-pt ftco-no-pb contact-section"
        >
          <div
            class="container"
          >
            <div
              class="h-100 d-flex align-items-center justify-content-center flex-column"
            >
              <div
                class="col-md-6 p-4 p-md-6 order-md-last bg-light"
              >
                <form
                  action="#"
                >
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="username"
                    >
                      User Name (*)
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="username"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="email"
                    >
                      Email (*)
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="email"
                        type="email"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="password"
                    >
                      Password (*)
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="password"
                        type="password"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="retypePassword"
                    >
                      Retype Password (*)
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="retypePassword"
                        type="password"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="aliasName"
                    >
                      Alias Name (*)
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="aliasName"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="phoneno"
                    >
                      Phone No
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="phoneno"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="address"
                    >
                      Address
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="address"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="form-group row"
                  >
                    <label
                      class="col-sm-4 col-form-label"
                      for="billingAddress"
                    >
                      Billing Address
                    </label>
                    <div
                      class="col-sm-8"
                    >
                      <input
                        class="form-control"
                        name="billingAddress"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="d-flex flex-row-reverse"
                  >
                    <button
                      class="btn btn-primary py-2 px-3"
                      type="submit"
                    >
                      Submit
                    </button>
                    <button
                      class="btn btn-primary py-2 px-3 mr-2"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <div>
      <section
        class="hero-wrap hero-wrap-2"
        data-stellar-background-ratio="0.5"
        style="background-image: url(images/bg_1.jpg);"
      >
        <div
          class="overlay"
        />
        <div
          class="container"
        >
          <div
            class="row no-gutters slider-text align-items-center justify-content-center"
          >
            <div
              class="col-md-9 text-center"
            >
              <h1
                class="mb-2 bread"
              >
                Login
              </h1>
              <p
                class="breadcrumbs"
              >
                <span
                  class="mr-2"
                >
                  <a
                    href="/"
                  >
                    Home 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </a>
                </span>
                 
                <span>
                  New User Account 
                  <i
                    class="ion-ios-arrow-forward"
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </section>
      <section
        class="ftco-section ftco-no-pt ftco-no-pb contact-section"
      >
        <div
          class="container"
        >
          <div
            class="h-100 d-flex align-items-center justify-content-center flex-column"
          >
            <div
              class="col-md-6 p-4 p-md-6 order-md-last bg-light"
            >
              <form
                action="#"
              >
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="username"
                  >
                    User Name (*)
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="username"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="email"
                  >
                    Email (*)
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="email"
                      type="email"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="password"
                  >
                    Password (*)
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="retypePassword"
                  >
                    Retype Password (*)
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="retypePassword"
                      type="password"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="aliasName"
                  >
                    Alias Name (*)
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="aliasName"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="phoneno"
                  >
                    Phone No
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="phoneno"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="address"
                  >
                    Address
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="address"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-group row"
                >
                  <label
                    class="col-sm-4 col-form-label"
                    for="billingAddress"
                  >
                    Billing Address
                  </label>
                  <div
                    class="col-sm-8"
                  >
                    <input
                      class="form-control"
                      name="billingAddress"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="d-flex flex-row-reverse"
                >
                  <button
                    class="btn btn-primary py-2 px-3"
                    type="submit"
                  >
                    Submit
                  </button>
                  <button
                    class="btn btn-primary py-2 px-3 mr-2"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Users form UserManager Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <section
          class="hero-wrap hero-wrap-2"
          data-stellar-background-ratio="0.5"
          style="background-image: url(images/bg_1.jpg);"
        >
          <div
            class="overlay"
          />
          <div
            class="container"
          >
            <div
              class="row no-gutters slider-text align-items-center justify-content-center"
            >
              <div
                class="col-md-9 text-center"
              >
                <h1
                  class="mb-2 bread"
                >
                  User Manager
                </h1>
                <p
                  class="breadcrumbs"
                >
                  <span
                    class="mr-2"
                  >
                    <a
                      href="/"
                    >
                      Home 
                      <i
                        class="ion-ios-arrow-forward"
                      />
                    </a>
                  </span>
                   
                  <span>
                    User Manager
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </span>
                </p>
              </div>
            </div>
          </div>
        </section>
        <section
          class="ftco-section"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col-lg-10"
              >
                <div>
                  <p>
                    <em>
                      Loading...
                    </em>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <div>
      <section
        class="hero-wrap hero-wrap-2"
        data-stellar-background-ratio="0.5"
        style="background-image: url(images/bg_1.jpg);"
      >
        <div
          class="overlay"
        />
        <div
          class="container"
        >
          <div
            class="row no-gutters slider-text align-items-center justify-content-center"
          >
            <div
              class="col-md-9 text-center"
            >
              <h1
                class="mb-2 bread"
              >
                User Manager
              </h1>
              <p
                class="breadcrumbs"
              >
                <span
                  class="mr-2"
                >
                  <a
                    href="/"
                  >
                    Home 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </a>
                </span>
                 
                <span>
                  User Manager
                  <i
                    class="ion-ios-arrow-forward"
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </section>
      <section
        class="ftco-section"
      >
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-10"
            >
              <div>
                <p>
                  <em>
                    Loading...
                  </em>
                </p>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
